rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__d.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": {
      "value": 1.0,
      "suffix": "None"
    },
    "raw": "1",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "Literal",
      "type": "Literal",
      "value": {
        "value": 2.0,
        "suffix": "None"
      },
      "raw": "2",
      "start": 4,
      "end": 5
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": {
        "value": 3.0,
        "suffix": "None"
      },
      "raw": "3",
      "start": 8,
      "end": 9
    },
    "start": 4,
    "end": 9
  },
  "start": 0,
  "end": 9
}
