rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__e.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "operator": "*",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": {
      "value": 1.0,
      "suffix": "None"
    },
    "raw": "1",
    "start": 0,
    "end": 1,
    "commentStart": 0
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "+",
    "left": {
      "type": "Literal",
      "type": "Literal",
      "value": {
        "value": 2.0,
        "suffix": "None"
      },
      "raw": "2",
      "start": 6,
      "end": 7,
      "commentStart": 6
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": {
        "value": 3.0,
        "suffix": "None"
      },
      "raw": "3",
      "start": 10,
      "end": 11,
      "commentStart": 10
    },
    "start": 6,
    "end": 11,
    "commentStart": 6
  },
  "start": 0,
  "end": 11,
  "commentStart": 0
}
