rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__h.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "operator": "*",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": {
      "value": 1.0,
      "suffix": "None"
    },
    "raw": "1",
    "start": 0,
    "end": 1,
    "commentStart": 0
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "+",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "operator": "/",
      "left": {
        "type": "BinaryExpression",
        "type": "BinaryExpression",
        "operator": "+",
        "left": {
          "type": "Literal",
          "type": "Literal",
          "value": {
            "value": 2.0,
            "suffix": "None"
          },
          "raw": "2",
          "start": 7,
          "end": 8,
          "commentStart": 7
        },
        "right": {
          "type": "Literal",
          "type": "Literal",
          "value": {
            "value": 3.0,
            "suffix": "None"
          },
          "raw": "3",
          "start": 11,
          "end": 12,
          "commentStart": 11
        },
        "start": 7,
        "end": 12,
        "commentStart": 7
      },
      "right": {
        "type": "Literal",
        "type": "Literal",
        "value": {
          "value": 4.0,
          "suffix": "None"
        },
        "raw": "4",
        "start": 17,
        "end": 18,
        "commentStart": 17
      },
      "start": 7,
      "end": 18,
      "commentStart": 7
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": {
        "value": 5.0,
        "suffix": "None"
      },
      "raw": "5",
      "start": 21,
      "end": 22,
      "commentStart": 21
    },
    "start": 7,
    "end": 22,
    "commentStart": 7
  },
  "start": 0,
  "end": 22,
  "commentStart": 0
}
