rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__j.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "operator": "/",
  "left": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "BinaryExpression",
      "type": "BinaryExpression",
      "operator": "*",
      "left": {
        "type": "BinaryExpression",
        "type": "BinaryExpression",
        "operator": "*",
        "left": {
          "type": "Name",
          "type": "Name",
          "name": {
            "type": "Identifier",
            "name": "distance",
            "start": 0,
            "end": 8
          },
          "path": [],
          "abs_path": false,
          "start": 0,
          "end": 8
        },
        "right": {
          "type": "Name",
          "type": "Name",
          "name": {
            "type": "Identifier",
            "name": "p",
            "start": 11,
            "end": 12
          },
          "path": [],
          "abs_path": false,
          "start": 11,
          "end": 12
        },
        "start": 0,
        "end": 12
      },
      "right": {
        "type": "Name",
        "type": "Name",
        "name": {
          "type": "Identifier",
          "name": "FOS",
          "start": 15,
          "end": 18
        },
        "path": [],
        "abs_path": false,
        "start": 15,
        "end": 18
      },
      "start": 0,
      "end": 18
    },
    "right": {
      "type": "Literal",
      "type": "Literal",
      "value": {
        "value": 6.0,
        "suffix": "None"
      },
      "raw": "6",
      "start": 21,
      "end": 22
    },
    "start": 0,
    "end": 22
  },
  "right": {
    "type": "BinaryExpression",
    "type": "BinaryExpression",
    "operator": "*",
    "left": {
      "type": "Name",
      "type": "Name",
      "name": {
        "type": "Identifier",
        "name": "sigmaAllow",
        "start": 26,
        "end": 36
      },
      "path": [],
      "abs_path": false,
      "start": 26,
      "end": 36
    },
    "right": {
      "type": "Name",
      "type": "Name",
      "name": {
        "type": "Identifier",
        "name": "width",
        "start": 39,
        "end": 44
      },
      "path": [],
      "abs_path": false,
      "start": 39,
      "end": 44
    },
    "start": 26,
    "end": 44
  },
  "start": 0,
  "end": 44
}
