rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_math_tests__k.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "type": "BinaryExpression",
  "operator": "+",
  "left": {
    "type": "Literal",
    "type": "Literal",
    "value": {
      "value": 2.0,
      "suffix": "None"
    },
    "raw": "2",
    "start": 0,
    "end": 1,
    "commentStart": 0
  },
  "right": {
    "type": "Literal",
    "type": "Literal",
    "value": {
      "value": 3.0,
      "suffix": "None"
    },
    "raw": "3",
    "start": 7,
    "end": 8,
    "commentStart": 7
  },
  "start": 0,
  "end": 8,
  "commentStart": 0
}
